feat: Implement comprehensive fundamental analysis suite
This commit introduces a suite of features for deeper fundamental analysis,
incorporating detailed company financials, sector/industry comparisons,
a company health scorecard, and enhanced AI capabilities to synthesize
and present these insights.

Key changes across phases:

Phase 1: Refactoring & Quality Improvements
- Refactored all feeder services (`AlphaVantageService`, `FinancialsService`, `SectorPerformanceService`, `FmpService`) to use SLF4J logging instead of System.out.
- Introduced a common `ApiErrorHandler` class in `feeder.common` to standardize API error processing and improve separation of concerns (SOLID).
- Enhanced unit tests for all refactored feeder services to align with new error handling and logging, and to adhere to FIRST principles.
- Refactored `StockPriceTool` in the presenter module for better logging, error message detail, and handling of incomplete data; updated its unit tests.

Phase 2: Exposing Data for Deeper Analysis
- Created `FinancialAnalysisTool` in the presenter module, providing methods for me to access:
    - Company Financial Overview (from `FinancialsService`)
    - Company Earnings Summaries (from `FinancialsService`)
    - Sector Performance Summaries (from `SectorPerformanceService`)
    - Sector & Industry P/E Ratios (from `FmpService`)
- Integrated `FinancialAnalysisTool` into my AI services.
- Updated `InvestmentAnalystPromptEnricher` to inform me of these new tools.
- Added unit tests for `FinancialAnalysisTool` and updated `OllamaRAGToolsIntegrationTest` to cover the new tool integrations.

Phase 3: Company Health Scorecard & Automated Insights
- Implemented `CompanyHealthScorecardService` to calculate a financial health score (0-100) based on profitability, liquidity/debt, and growth metrics, returning key positive/negative takeaways.
- Created `CompanyHealthTool` to expose scorecard functionality to me.
- Integrated `CompanyHealthTool` into my AI services.
- 